// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Loader Dots Loader 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-2 {
  position: relative;
  width: 6px;
  height: 6px;
  border-radius: 5px;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite linear alternate;
  animation: dotFlashing 0.7s infinite linear alternate;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.emotion-2::after,
.emotion-2::before {
  content: '';
  display: inline-block;
  position: absolute;
  top: 0;
}

.emotion-2::before {
  left: -10px;
  width: 6px;
  height: 6px;
  border-radius: 5px;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

.emotion-2::after {
  left: 10px;
  width: 6px;
  height: 6px;
  border-radius: 5px;
  background-color: #dbdbdb;
  color: #dbdbdb;
  -webkit-animation: dotFlashing 0.7s infinite alternate;
  animation: dotFlashing 0.7s infinite alternate;
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      data-testid="dots-loading"
    />
  </div>
</div>
`;

exports[`Storyshots Design System/Loader Indeterminate Loader 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-2 {
  position: relative;
  width: 100%;
  height: 0.5rem;
  overflow-x: hidden;
  border-radius: 0.5rem;
}

.emotion-3 {
  position: absolute;
  opacity: 0.4;
  background: #F3F5F9;
  width: 150%;
  height: 0.5rem;
}

.emotion-4 {
  position: absolute;
  background: #232d7d;
  height: 0.5rem;
  -webkit-animation: decrease 2.3s 0.8s infinite;
  animation: decrease 2.3s 0.8s infinite;
}

.emotion-5 {
  position: absolute;
  background: #232d7d;
  height: 0.5rem;
  -webkit-animation: increase 2.3s infinite;
  animation: increase 2.3s infinite;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      data-testid="dots-loading"
    >
      <div
        className="emotion-3"
      />
      <div
        className="emotion-4"
      />
      <div
        className="emotion-5"
      />
    </div>
  </div>
</div>
`;
